--- a/app/src/main/res/layout/nested_item_player.xml
+++ b/app/src/main/res/layout/nested_item_player.xml
@@ -23,31 +23,16 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
-<!--
-
-            <ImageButton android:id="@id/exo_play"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:background="@drawable/player_circle_background"
-                style="@style/ExoMediaButton.Play"/>
-
-            <ImageButton android:id="@id/exo_pause"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:background="@drawable/player_circle_background"
-                style="@style/ExoMediaButton.Pause"/>
--->
-
-            <ImageButton
-                android:layout_gravity="center"
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivVolume"
-                style="@style/ExoMediaButton.Pause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/player_circle_background"
-                android:padding="20dp" />
+                android:padding="8dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/design_default_color_primary"
+                app:srcCompat="@drawable/ic_volume_on" />
+
         </FrameLayout>
     </LinearLayout>
 </layout>
