--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="4dp"
-        android:layout_margin="8dp">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,9 +35,8 @@
                     android:id="@+id/ivVolume"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#80FFFFFF"
-                    android:visibility="gone"
-                    tools:visibility="visible"
+                    android:background="@drawable/player_circle_background"
+                    android:layout_gravity="center"
                     android:padding="8dp"
                     app:srcCompat="@drawable/ic_volume_on" />
             </FrameLayout>
